# EZProto

./: .gitignore  README.md  app_state.json  pyproject.toml
output/baard/: baard.kicad_pcb
output/bord/: bord.kicad_pcb
output/das 4x4/: das_4x4.kicad_pcb
output/dassss/: dassss.kicad_pcb
output/dir/: dir.kicad_pcb
output/djas/: djas.kicad_pcb
output/gerby/: gerby.kicad_pcb
output/gerby/gerby_DFM/: gerby.drl  gerby_B_Cu.gbr  gerby_B_Mask.gbr  gerby_Edge_Cuts.gbr  gerby_F_Cu.gbr  gerby_F_Mask.gbr
output/good morning/: good_morning.kicad_pcb
output/hell/: hell.kicad_pcb
output/help/: help.kicad_pcb
output/luna/: luna.kicad_pcb
output/tien/: tien.kicad_pcb
plans/: BREAKOUT-IMPROVEMENT  BREAKOUT-UPDATE.md  BREAKOUT_Generator.md  ENCLOSURE-GENERATOR-PLAN.md
src/ezproto/: BREAKOUT_Generator.md  __init__.py  __main__.py  app.py  app.tcss  fabrication.py  kicad.py  models.py  preview.py  storage.py  updater.py  web.py  welcome_art.txt
src/ezproto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ezproto/breakout/: __init__.py  footprint_parser.py  generator.py  header_generator.py  models.py  router.py
tests/: test_app_generation.py  test_breakout.py  test_breakout_app.py  test_fabrication.py  test_kicad.py  test_main.py  test_preview.py  test_storage.py  test_updater.py  test_welcome_tab.py
tests/fixtures/: simple_soic6.kicad_mod
users/: das2.json  dasman.json
